hphp/test/slow/traits/2137.php.expectf
 Fatal error: Something cannot inherit the context constant C, because it was previously inherited from I in %s/2137.php on line 11
